- fixed the map not showing up due to the styles being removed for the map-container - added auto rotation to the map globe on initial start up - added map centre display into parent component to demonstrate how to get map component information from a child component

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@ html {
 * {
 	box-sizing: border-box;
 }
+
+.map-container {
+	top: 0;
+	bottom: 0;
+	width: 100%;
+}
